[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.4"
csv = "1.1.6"
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.130"
kmeans = "0.2.1"
ndarray = "0.15.6"
